syntax = "proto3";

package pb;

option go_package = "../service";

message UserReuqest{
  uint64 id = 1;
  oneof V{
    string a = 2;
    int64 b = 3;
  }
}

message UserResponse{
  string name = 1;
}

service UserService{
  rpc Test(UserReuqest) returns (UserResponse);
  rpc Test2(UserReuqest) returns (UserResponse);
}